<resources>
    <string name="app_name">Audible Books</string>
    <string name="upload_books">upload books</string>
    <string name="view_books">view books</string>
    <string name="audible_books">Audible Books</string>
    <string name="search_elements">search_elements</string>
    <string name="classics">Classics</string>
    <string name="self_development">Self Development</string>
    <string name="stories">Stories</string>
    <string name="science">Science</string>
    <string name="development">Development</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="account">Account</string>
    <string name="settings">Settings</string>
    <string name="upload">Upload</string>
    <string name="search_books">Search Books</string>
    <string name="search_books1">Search Books...</string>
    <string name="browse">Browse</string>
    <string name="upload2">Upload</string>
    <string name="choose_a_file_to_upload">Choose a file to upload</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="joey_sharenofood_com">joey@sharenofood.com</string>
    <string name="_1_202_555_0157">+1-202-555-0157</string>
    <string name="joey_tribbiani">Joey Tribbiani</string>
    <string name="new_york_usa">new york, usa</string>
    <string name="todo">TODO</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="sign_up">SIGN UP</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notifications">Notifications</string>
    <string name="information_about_the_app">information about the app</string>
    <string name="sign_out">sign out</string>
    <string name="open_my_file">Open My File</string>
    <string name="login">LOGIN</string>
    <string name="name">Name</string>
    <string name="user_name">User Name</string>
    <string name="play">Play</string>
    <string name="read">Read</string>
    <string name="reset_password">Reset Password</string>
</resources>