<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryLight"
    tools:context=".Settings">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutHeader"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/header_background"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/txtAppName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/app_name"
            android:textColor="@color/primaryDark"
            android:textSize="100px"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/settingtxt"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="75dp"
            android:layout_marginEnd="60dp"
            android:text="@string/settings"
            android:textAlignment="textStart"
            android:textColor="@color/primaryDark"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:backgroundTint="@color/buttonColor"
        app:itemIconTint="@drawable/selector"
        app:itemTextColor="@drawable/selector"
        app:itemIconSize="30dp"
        app:labelVisibilityMode="unlabeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/navigation_menu"
        tools:layout_editor_absoluteX="0dp"/>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:alpha="0.2"
        android:src="@drawable/headphone"
        app:layout_constraintBottom_toTopOf="@+id/viewDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutHeader"
        app:layout_constraintVertical_bias="0.29" />

    <View
        android:id="@+id/viewDivider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/buttonColor"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigation"/>

    <Button
        android:id="@+id/signoutbtn"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="400dp"
        android:layout_marginEnd="59dp"
        android:layout_marginBottom="33dp"
        android:background="@color/buttonColor"
        android:text="@string/sign_out"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/appInfo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/appInfo"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="59dp"
        android:layout_marginBottom="1dp"
        android:text="@string/information_about_the_app"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/viewDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Switch
        android:id="@+id/notification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginTop="246dp"
        android:layout_marginEnd="256dp"
        android:layout_marginBottom="127dp"
        android:text="@string/notifications"
        android:textColor="@color/black"
        android:thumbTint="@color/buttonColor"
        app:layout_constraintTop_toBottomOf="@id/layoutHeader"
        app:layout_constraintBottom_toTopOf="@id/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>